--- a/.github/workflows/testvt.yaml
+++ b/.github/workflows/testvt.yaml
@@ -12,13 +12,12 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v3
+      #- name: "Checkout"
+      #  uses: actions/checkout@v3
 
       - name: "VirusTotal"
-        uses: cssnr/virustotal-action@limiter
+        uses: cssnr/virustotal-action@updates
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           vt_api_key: ${{ secrets.VT_API_KEY }}
           update_release: true
-          rate_limit: invalid
