--- a/.github/workflows/testvt.yaml
+++ b/.github/workflows/testvt.yaml
@@ -16,7 +16,7 @@ jobs:
       #  uses: actions/checkout@v3
 
       - name: "VirusTotal"
-        uses: cssnr/virustotal-action@updates
+        uses: cssnr/virustotal-action@download
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           vt_api_key: ${{ secrets.VT_API_KEY }}
