--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,7 @@ jobs:
         run: |
           echo GITHUB_REF_NAME: $GITHUB_REF_NAME
           cat src/version.txt
-          echo $GITHUB_REF_NAME > src\version.txt
+          echo "$GITHUB_REF_NAME" > src\version.txt
           cat src/version.txt
 
   macos:
@@ -54,5 +54,5 @@ jobs:
         run: |
           echo GITHUB_REF_NAME: $GITHUB_REF_NAME
           cat src/version.txt
-          echo $GITHUB_REF_NAME > src\version.txt
+          echo "$GITHUB_REF_NAME" > src\version.txt
           cat src/version.txt
