--- a/.github/disabled/build.yaml
+++ b/.github/disabled/build.yaml
@@ -1,61 +1,58 @@
-name: Build
+name: "Build"
 
 on:
   workflow_dispatch:
-    inputs:
-      tags:
-        description: 'Tags to Push'
-        required: true
-        default: 'latest'
-
-env:
-  REGISTRY: "ghcr.io"
-  USER: "django-files"
-  REPO: "django-files"
+  release:
+    types: [published]
 
 jobs:
-  build:
-    name: "Build"
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
+  windows:
+    name: "Windows"
+    runs-on: windows-latest
+    timeout-minutes: 5
 
     steps:
-      - name: "Testing 1"
-        id: step1
-        run: |
-          echo ${{ inputs.tags }}
-          TAGS=""
-          IFS=',' read -ra INPUT <<< "${{ inputs.tags }}"
-          for tag in "${INPUT[@]}";do
-            echo "${REGISTRY}/${USER}/${REPO}:${tag}"
-            TAGS+="${REGISTRY}/${USER}/${REPO}:${tag},"
-          done
-          TAGS="$(echo ${TAGS} | sed 's/,*$//g')"
-          echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+      - name: "Checkout"
+        uses: actions/checkout@v4
 
-      - name: "Testing 2"
-        id: step2
+      - name: "Write Version"
+        if: ${{ github.event_name == 'release' }}
         run: |
-          echo ${{ steps.step1.outputs.tags }}
-#      - name: "Checkout"
-#        uses: actions/checkout@v3
-#
-#      - name: "Setup Buildx"
-#        uses: docker/setup-buildx-action@v2
-#        with:
-#          platforms: linux/amd64,linux/arm64
-#
-#      - name: "Docker Login"
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: ${{ secrets.GHCR_USER }}
-#          password: ${{ secrets.GHCR_PASS }}
-#
-#      - name: "Build and Push"
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: .
-#          platforms: linux/amd64,linux/arm64
-#          push: true
-#          tags: ghcr.io/django-files/django-files:latest
+          Write-Output "GITHUB_REF_NAME: $env:GITHUB_REF_NAME"
+          Get-Content src/version.txt
+          $env:GITHUB_REF_NAME | Set-Content src\version.txt
+          Get-Content src/version.txt
+
+  linux:
+    name: "Linux"
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Write Version"
+        if: ${{ github.event_name == 'release' }}
+        run: |
+          echo GITHUB_REF_NAME: $GITHUB_REF_NAME
+          cat src/version.txt
+          echo "$GITHUB_REF_NAME" > src/version.txt
+          cat src/version.txt
+
+  macos:
+    name: "macOS"
+    runs-on: macos-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Write Version"
+        if: ${{ github.event_name == 'release' }}
+        run: |
+          echo GITHUB_REF_NAME: $GITHUB_REF_NAME
+          cat src/version.txt
+          echo "$GITHUB_REF_NAME" > src/version.txt
+          cat src/version.txt
