--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,11 +48,13 @@ jobs:
           images: ${{ matrix.image }}
           tags: |
             type=ref,event=tag,value=${{ github.ref }}
-            type=raw,value=latest,enable=${{ ! github.event.release.prerelease }}
+            type=raw,value=latest,enable=${{ github.event.release.prerelease == 'false' }}
 
       - name: 'Debug'
         run: |
           echo "file: ${{ matrix.dockerfile }}"
+          echo "prerelease: ${{ github.event.release.prerelease }}"
+          echo "prerelease bool: ${{ github.event.release.prerelease == 'false' }}"
           echo "tags: ${{ steps.meta.outputs.tags }}"
           echo "labels: ${{ steps.meta.outputs.labels }}"
 
