--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: smashedr/js-test-action@master
         id: tags
         with:
-          image: my-image
+          images: my-image
 
       - name: 'Debug 2'
         run: |
