--- a/.github/disabled/build-docker.yaml
+++ b/.github/disabled/build-docker.yaml
@@ -3,7 +3,10 @@ name: Build
 on:
   release:
     types: [published]
-  pull_request:
+
+env:
+  REGISTRY: ghcr.io
+  USER: ${{ github.repository_owner }}
 
 jobs:
   build:
@@ -41,22 +44,38 @@ jobs:
       - name: 'Docker Metadata'
         id: meta
         uses: docker/metadata-action@v5
-        env:
-          latest: ${{ ! github.event.release.prerelease && github.event_name == 'release' }}
         with:
           images: ${{ matrix.image }}
           flavor: |
             latest=false
           tags: |
-            type=ref,event=pr
-            type=ref,event=tag
-            type=raw,value=latest,enable=${{ env.latest }}
+            type=ref,event=tag,value=${{ github.ref }}
+            type=raw,value=latest,enable=${{ ! github.event.release.prerelease  }}
 
-      - name: 'Debug'
+      - name: 'Debug 1'
         run: |
           echo "file: ${{ matrix.dockerfile }}"
           echo "image: ${{ matrix.image }}"
-          echo "tags: ${{ steps.meta.outputs.tags }}"
+
+      #      - name: 'JS'
+      #        #uses: smashedr/javascript-action@master
+      #        uses: ./.github/update-json-value
+      #        with:
+      #          file: src/manifest.json
+
+      - name: 'Docker Tags'
+        #        uses: ./.github/docker-tags
+        uses: smashedr/js-test-action@master
+        id: tags
+        with:
+          images: ${{ matrix.image }}
+
+      - name: 'Debug 2'
+        run: |
+          echo "file: ${{ matrix.dockerfile }}"
+          echo "image: ${{ matrix.image }}"
+          echo "tags: ${{ steps.tags.outputs.tags }}"
+          echo "meta: ${{ steps.meta.outputs.tags }}"
 
 #      - name: 'Build and Push'
 #        uses: docker/build-push-action@v4
