--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,14 +8,10 @@ contact_links:
     about: Ask a General Question or start a Discussions.
     url: https://github.com/cssnr/link-extractor/discussions/new?category=q-a
 
-  - name: Join the Discord Server
-    about: Chat with us about Issues, Features, Questions and More...
+  - name: Join Discord
+    about: Chat with us about Issues, Features, Questions and More.
     url: https://discord.gg/wXy6m2X8wY
 
   - name: Submit Feedback
     about: Send General Feedback Anonymously.
     url: https://cssnr.github.io/feedback
-
-  - name: View More Apps
-    about: View Additional Apps we have Created.
-    url: https://cssnr.github.io/
