--- a/.github/ISSUE_TEMPLATE/0-bug.yaml
+++ b/.github/ISSUE_TEMPLATE/0-bug.yaml
@@ -1,6 +1,5 @@
 name: "⚠️ Report an Issue"
 description: "Something Not Working Right? Please let us know..."
-title: "[Bug] "
 labels: ["bug"]
 assignees:
   - smashedr
@@ -17,7 +16,7 @@ body:
       required: false
     attributes:
       label: Site Link
-      description: Please provide a `link` to the site you are having issues on if possible.
+      description: Please provide a link to the site you are having issues on if possible.
       placeholder: https://example.com/
 
   - type: textarea
@@ -26,7 +25,7 @@ body:
       required: true
     attributes:
       label: Details
-      description: Please describe the issue you are experiencing and `how to reproduce` if possible.
+      description: Please describe the issue you are experiencing and how to reproduce.
       placeholder: Provide as many details as you can...
 
   - type: textarea
@@ -35,7 +34,7 @@ body:
       required: true
     attributes:
       label: Paste Support Information
-      description: Open the extension `Options`, scroll to the bottom, click `Copy Support Information` and paste below.
+      description: Open the extension options, scroll to the bottom, click Copy Support Information and paste below.
       render: shell
 #
 #  - type: dropdown
