--- a/.github/ISSUE_TEMPLATE/0-bug.yaml
+++ b/.github/ISSUE_TEMPLATE/0-bug.yaml
@@ -28,14 +28,14 @@ body:
     validations:
       required: true
     attributes:
-      label: Paste Support Information
+      label: Support Information
       description: Open the extension options, scroll to the bottom, click Copy Support Information and paste below.
       render: shell
 
   - type: markdown
     attributes:
       value: |
-        All bugs that we can verify will be fixed. Thank you for taking the time to make this report!
+        All issues/bugs that we can verify will be fixed. Thank you for taking the time to make this report!
 
 #  - type: dropdown
 #    id: version
