--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ venv/
 *.log
 settings.ini
 secrets.txt
+.vscode/
+**/dist/
+build/
+node_modules/
+web-ext-artifacts/
+tests/screenshots/
+src/manifest.json
