--- a/.github/workflows/issue.yaml
+++ b/.github/workflows/issue.yaml
@@ -20,9 +20,27 @@ jobs:
         with:
           node-version: 20
 
-      - name: "Debug"
+      - name: "Debug 1"
         run: |
           echo "Issue number: ${{ github.event.issue.number }}"
+          echo "Issue title: ${{ github.event.issue.title }}"
+          echo "Issue body: ${{ github.event.issue.body }}"
+
+      - name: Parse issue
+        id: parse
+        uses: onmax/issue-form-parser@v1.5
+        with:
+          issue_number: ${{ github.event.issue.number }}
+
+      - name: Show parsed payload data
+        run: |
+          echo '${{ steps.parse.outputs.payload }}'
+          echo 'Site Link: ${{ fromJson(steps.parse.outputs.payload)["Site Link"] }}'
+          echo 'Details: ${{ fromJson(steps.parse.outputs.payload)["Details"] }}'
+
+      - name: "Debug 2"
+        run: |
+          echo "Issue number: ${{ fromJson(steps.parse.outputs.payload)["Name"] }}"
           echo "Issue title: ${{ github.event.issue.title }}"
           echo "Issue body: ${{ github.event.issue.body }}"
 
@@ -33,8 +51,8 @@ jobs:
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
           BODY: >
-            This issue is available for anyone to work on.
-            **Make sure to reference this issue in your pull request.**
+            This issue is available for anyone to work on.  
+            **Make sure to reference this issue in your pull request.**  
             :sparkles: Thank you for your contribution! :sparkles:
 
 #      - name: "Install"
