--- a/package.json
+++ b/package.json
@@ -1,15 +1,36 @@
 {
-  "name": "parse-issue-form-action",
-  "version": "0.0.1",
+  "name": "test3",
   "scripts": {
-    "build": "ncc build src/index.js"
+    "postinstall": "npx gulp",
+    "lint:eslint": "npx eslint src/js",
+    "lint:web-ext": "npm run manifest:firefox && npx web-ext lint --source-dir ./src/ --ignore-files dist/**",
+    "lint": "npm run lint:eslint && npm run lint:web-ext",
+    "test": "npx json-merger -p -am concat -o src/manifest.json manifest.json tests/manifest-test.json && node tests/test.js",
+    "chrome": "npm run manifest:chrome && web-ext run --source-dir ./src/ --target=chromium",
+    "firefox": "npm run manifest:firefox && web-ext run --source-dir ./src/",
+    "manifest:chrome": "npx json-merger -p -am concat -o src/manifest.json manifest.json manifest-chrome.json",
+    "manifest:firefox": "npx json-merger -p -am concat -o src/manifest.json manifest.json manifest-firefox.json",
+    "build:chrome": "npm run manifest:chrome && npx web-ext build -n {name}-chrome-{version}.zip -o -s src",
+    "build:firefox": "npm run manifest:firefox && npx web-ext build -n {name}-firefox-{version}.zip -o -s src",
+    "build": "npm run build:chrome && npm run build:firefox"
   },
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0"
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "bootstrap": "^5.3.3",
+    "clipboard": "^2.0.11",
+    "datatables.net": "^2.0.7",
+    "datatables.net-bs5": "^2.0.8",
+    "datatables.net-buttons": "^3.0.2",
+    "datatables.net-buttons-bs5": "^3.0.2",
+    "jquery": "^3.7.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.1",
-    "prettier": "^3.3.2"
+    "@types/chrome": "^0.0.268",
+    "eslint": "^8.57.0",
+    "gulp": "^4.0.2",
+    "json-merger": "^1.1.10",
+    "prettier": "^3.3.2",
+    "puppeteer": "^22.12.1",
+    "web-ext": "^8.2.0"
   }
 }
